@@ -6,11 +6,11 @@ const HuntMagicItems: { [id: number]: TMagicItemsFile } & Object = {
     type: 'HUNT_PROBABILITY_BOOST',
     huntType: 'demons',
     probabilities: [
-      { amount: 1, probabilty: 46 },
-      { amount: 2, probabilty: 18 },
+      { amount: 1, probabilty: 38 },
+      { amount: 2, probabilty: 24 },
       { amount: 4, probabilty: 15 },
       { amount: 3, probabilty: 12 },
-      { amount: 5, probabilty: 9 },
+      { amount: 5, probabilty: 11 },
     ],
     cost: 450_000,
   },
@@ -62,8 +62,8 @@ const HuntMagicItems: { [id: number]: TMagicItemsFile } & Object = {
     type: 'HUNT_PROBABILITY_BOOST',
     huntType: 'gods',
     probabilities: [
-      { amount: 0, probabilty: 75 },
-      { amount: 1, probabilty: 25 },
+      { amount: 0, probabilty: 82 },
+      { amount: 1, probabilty: 18 },
     ],
     cost: 1_500_000,
   },
@@ -73,6 +73,41 @@ const HuntMagicItems: { [id: number]: TMagicItemsFile } & Object = {
     huntType: 'demons',
     huntCooldown: 2700000,
     rarity: 'epic',
+  },
+  8: {
+    type: 'HUNT_COOLDOWN_REDUCTION',
+    dropChance: 0.46,
+    huntType: 'giants',
+    huntCooldown: 2700000,
+    rarity: 'epic',
+  },
+  9: {
+    type: 'HUNT_COOLDOWN_REDUCTION',
+    dropChance: 0.32156,
+    huntType: 'angels',
+    huntCooldown: 2700000,
+    rarity: 'legendary',
+  },
+  10: {
+    type: 'HUNT_COOLDOWN_REDUCTION',
+    dropChance: 0.22216,
+    huntType: 'archangels',
+    huntCooldown: 2700000,
+    rarity: 'legendary',
+  },
+  11: {
+    type: 'HUNT_COOLDOWN_REDUCTION',
+    dropChance: 0.11985,
+    huntType: 'demigods',
+    huntCooldown: 2700000,
+    rarity: 'legendary',
+  },
+  12: {
+    type: 'HUNT_COOLDOWN_REDUCTION',
+    dropChance: 0.0666,
+    huntType: 'gods',
+    huntCooldown: 2700000,
+    rarity: 'mythical',
   },
 };
 
