@@ -5,6 +5,16 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).
 
+## [Unreleased]
+
+### Added
+
+- Novos Itens Mágicos para aceleação de caças! `Ampulheta Gigante` (Gigantes) - Drop: 0.46%. `Harpa Celestial` (Anjos) - Drop: 0.32156%. `Trombetas dos Céus` (Arcanjos) - Drop: 0.22216%. `Chave do Acampamento dos Meio Sangue` (Semideuses) - Drop: 0.11985%. `Cabeça da Medusa` (Deuses) - Drop: 0.0666%
+
+### Changed
+
+- Probabilidade de alguns itens de caça foram mudadas! **O Colt**: 1: `46%` -> `38%` | 2: `18%` -> `24%` | 5: `9%` -> `11%`. **Deicídio**: 0: `75%` -> `82%` | 1: `25%` -> `18%`
+
 ## [3.5.3] 2021-11-30
 
 ### Added
